--- a/technicolor_boxes.html
+++ b/technicolor_boxes.html
@@ -23,7 +23,7 @@
     </style>
     <script>
         randomColor = (myDiv) => {
-            colorValue = '#'+Math.floor(Math.random()*16777215).toString(16);
+            let colorValue = '#'+Math.floor(Math.random()*16777215).toString(16);
             myDiv.style.backgroundColor=colorValue;
             myDiv.style.boxShadow='1px 1px 15px cyan';
         }
@@ -42,9 +42,8 @@
         }
     </script>
 </head>
-<body>
+<body onload="fillSquare()">
     <div class="wrapper" id="bigBox">
-        <button onclick="fillSquare()">Play The Game!</button>
     </div>
 </body>
 </html>
